Fix layout bug where header on landing page would not appear in vertical mode

--- a/docs/style.css
+++ b/docs/style.css
@@ -50,7 +50,7 @@ body {
 }
 
 .page-header {
-  grid-row: 1/ span 2;
+  grid-row: 1/ span 1;
   grid-column: 1 / span 2;
 
   padding: 30px;
